fixed overflow words.

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ button {
   flex: 1;
   font-size: 16px;
   font-weight: 400;
+  word-break: break-word;
 }
 
 footer:before {
